@@ -1,4 +1,13 @@
 <STRONG>Changes since 0.9.4</STRONG><BR><BR>
+The build 0.9.4.1329 has following changes:<BR>
+<ul>
+	<LI> Added option to send text in custom key-mapping.</LI>
+	<LI> Added option to disable session-initiated window resize.</LI>
+	<LI> Fixed underline color bug (#1640553).</LI>
+	<LI> Fixed scrolling bug when there is no scrollbar. </LI>
+	<LI> Further tweaking of the full screen mode behavior.</LI>
+</UL>
+
 The build 0.9.4.1324 has following changes:<BR>
 <ul>
 	<LI> Added option to turn off vertical scrollbar.</LI>
