@@ -7,10 +7,10 @@ www.andymatuschak.org/xml-namespaces/sparkle">
         <description>Most recent changes with links to updates.</description> 
         <language>en</language> 
         <item> 
-            <title>Version 0.9.4.1324</title> 
+            <title>Version 0.9.4.1329</title> 
             <description>http://iterm.sourceforge.net/Changelog.html</description> 
-            <pubDate>Wed, 24 Jan 2007 23:59:11 +0000</pubDate> 
-            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.4.1324.zip" length="1571472" 
+            <pubDate>Mon, 29 Jan 2007 23:59:11 +0000</pubDate> 
+            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.4.1329.zip" length="1577863" 
 type="application/octet-stream"/> 
         </item> 
     </channel> 
